// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OSC payload snapshots captures EOS-native channel parameter payloads 1`] = `
{
  "address": "/eos/chan/2/param/pan",
  "args": [
    {
      "type": "f",
      "value": 45,
    },
  ],
  "arguments": "EOS-native channel parameter float argument",
  "wireFormat": "eos-native-arguments",
}
`;

exports[`OSC payload snapshots captures EOS-native channel parameter payloads 2`] = `
{
  "address": "/eos/addr/1%2F101/DMX",
  "args": [
    {
      "type": "i",
      "value": 255,
    },
  ],
  "arguments": "EOS-native DMX raw integer argument",
  "wireFormat": "eos-native-arguments",
}
`;

exports[`OSC payload snapshots captures EOS-native command line payloads 1`] = `
{
  "address": "/eos/cmd",
  "args": [
    {
      "type": "s",
      "value": "Go To Cue 20#",
    },
  ],
  "arguments": "single OSC string containing an EOS command-line command",
  "wireFormat": "eos-native-command",
}
`;

exports[`OSC payload snapshots captures EOS-native command line payloads 2`] = `
{
  "address": "/eos/newcmd",
  "args": [
    {
      "type": "s",
      "value": "Record Cue 1#",
    },
  ],
  "arguments": "single OSC string containing an EOS command-line command",
  "wireFormat": "eos-native-command",
}
`;

exports[`OSC payload snapshots captures EOS-native control surface payloads 1`] = `
{
  "address": "/eos/key/go_0",
  "args": [
    {
      "type": "f",
      "value": 1,
    },
  ],
  "arguments": "EOS-native key press float argument",
  "wireFormat": "eos-native-arguments",
}
`;

exports[`OSC payload snapshots captures EOS-native control surface payloads 2`] = `
{
  "address": "/eos/group/5/level",
  "args": [
    {
      "type": "f",
      "value": 75,
    },
  ],
  "arguments": "EOS-native group level float argument",
  "wireFormat": "eos-native-arguments",
}
`;

exports[`OSC payload snapshots captures EOS-native effect command payloads 1`] = `
{
  "address": "/eos/cmd",
  "args": [
    {
      "type": "s",
      "value": "Effect 12",
    },
  ],
  "arguments": "single OSC string containing \`Effect <number>\`",
  "wireFormat": "eos-native-command",
}
`;

exports[`OSC payload snapshots captures EOS-native effect command payloads 2`] = `
{
  "address": "/eos/cmd",
  "args": [
    {
      "type": "s",
      "value": "Effect 7 Stop",
    },
  ],
  "arguments": "single OSC string containing \`Effect Stop\` or \`Effect <number> Stop\`",
  "wireFormat": "eos-native-command",
}
`;

exports[`OSC payload snapshots captures EOS-native layout payloads 1`] = `
{
  "address": "/eos/fader/1/config/10",
  "args": [],
  "arguments": "EOS-native address path encodes bank, optional page, and fader count",
  "wireFormat": "eos-native-address",
}
`;

exports[`OSC payload snapshots captures EOS-native layout payloads 2`] = `
{
  "address": "/eos/ds/1/Chan/1/10",
  "args": [],
  "arguments": "EOS-native address path encodes bank, target, optional flexi, optional page, and buttons",
  "wireFormat": "eos-native-address",
}
`;

exports[`OSC payload snapshots captures EOS-native show-control command payloads 1`] = `
{
  "address": "/eos/newcmd",
  "args": [
    {
      "type": "s",
      "value": "Show_Control Cue_Send_String "Cue %1 -> %2 (%3)"",
    },
  ],
  "arguments": "single OSC string containing \`Show_Control Cue_Send_String ...\`",
  "wireFormat": "eos-native-command",
}
`;

exports[`OSC payload snapshots captures EOS-native show-control command payloads 2`] = `
{
  "address": "/eos/newcmd",
  "args": [
    {
      "type": "s",
      "value": "Show_Control Cue_Receive_String "Receive %1 [%2]"",
    },
  ],
  "arguments": "single OSC string containing \`Show_Control Cue_Receive_String ...\`",
  "wireFormat": "eos-native-command",
}
`;

exports[`OSC payload snapshots captures cue/magic sheet EOS-native payloads 1`] = `
{
  "address": "/eos/cue/2/1/fire",
  "args": [],
  "arguments": "EOS-native address path encodes cue/cuelist, no OSC arguments",
  "wireFormat": "eos-native-address",
}
`;

exports[`OSC payload snapshots captures cue/magic sheet EOS-native payloads 2`] = `
{
  "address": "/eos/ms",
  "args": [
    {
      "type": "i",
      "value": 3,
    },
  ],
  "arguments": "OSC integer arguments for magic sheet number and optional view number",
  "wireFormat": "eos-native-arguments",
}
`;
